--- a/CriminalIntent/res/values/strings.xml
+++ b/CriminalIntent/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="crime_report_suspect">The suspect is %s.</string>
     <string name="crime_report_subject">CriminalIntent Crime Report</string>
     <string name="send_report">Send crime report via</string>
+    <string name="crime_call_text">Call suspect</string>
     
 
 </resources>
